// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCommonStoreParams Возвращает корректый объект для десктопа 1`] = `
Object {
  "clientType": 1,
  "queryId": "cce63354dbe464c7baee8b7de82bcfd8",
  "queryText": "/lyubertsy/kupit/novostrojka/lyubercy-1839196/",
  "rereferer": "https://realty.test.vertis.yandex.ru/moskva_i_moskovskaya_oblast/kupit/novostrojka/",
  "webReferer": "https://realty.test.vertis.yandex.ru/lyubertsy/kupit/novostrojka/lyubercy-1839196/",
}
`;

exports[`getCommonStoreParams Возвращает корректый объект для планшета 1`] = `
Object {
  "clientType": 2,
  "queryId": "cce63354dbe464c7baee8b7de82bcfd8",
  "queryText": "/lyubertsy/kupit/novostrojka/lyubercy-1839196/",
  "rereferer": undefined,
  "webReferer": undefined,
}
`;

exports[`getCommonStoreParams Возвращает корректый объект для тача 1`] = `
Object {
  "clientType": 3,
  "queryId": "cce63354dbe464c7baee8b7de82bcfd8",
  "queryText": "/lyubertsy/kupit/novostrojka/lyubercy-1839196/",
  "rereferer": undefined,
  "webReferer": undefined,
}
`;
